Uma melhoria no layout do PokemonCard desativou a função do botão de favoritar. Adicionar z-index = 3 no respectivo CSS resolveu o problema

--- a/src/components/Pokedex/PokemonCard/PokemonCard.css
+++ b/src/components/Pokedex/PokemonCard/PokemonCard.css
@@ -17,6 +17,7 @@
     position: absolute;
     bottom: 1.5rem;
     right: 0.3rem;
+    z-index: 3;
 }
 
 .pokemonCard:hover {
